--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -5,7 +5,7 @@ localhost {
         reverse_proxy client:8080
     }
 
-    rewrite /api /api/
+    redir /api /api/
     handle_path /api/* {
         reverse_proxy server:5000
     }
