--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -73,8 +73,8 @@ services:
       CORS: true
       DEBUG: true
       URL_API: "http://${DEPLOY__HOST}/api"
-      URL_OAUTH: "http://${DEPLOY__HOST}/oauth"
-      URL_WEB_CLIENT: "http://${DEPLOY__HOST}"
+      URL_AUTH: "http://${DEPLOY__HOST}/auth"
+      URL_WEB_CLIENT: "http://${DEPLOY__HOST}:8080"
       URL_MINIO: "http://${DEPLOY__HOST}/minio"
       DB_ENDPOINT: mongo
       DB_PORT: 27017
@@ -103,7 +103,7 @@ services:
       start_period: 1m
 
 #  web-client:
-#    image: "ghcr.io/osu-pulse/osu-pulse-web-client:${VERSION__WEB_CLIENT}"
+#    image: "ghcr.io/osu-pulse/osu-pulse-client:${VERSION__CLIENT}"
 #    expose:
 #      - 8080
 #    ports:
