setup nginx assets proxy

--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -1,33 +1,37 @@
-localhost {
+:80 {
     encode gzip
 
     handle_path /* {
-        reverse_proxy client:8080
+        reverse_proxy osu-pulse-client-1:8080
     }
 
     redir /api /api/
     handle_path /api/* {
-        reverse_proxy server:5000
+        reverse_proxy osu-pulse-server-1:5000
     }
 
     handle_path /auth/* {
         rewrite * /auth{path}
-        reverse_proxy server:5000
+        reverse_proxy osu-pulse-server-1:5000
     }
 
     rewrite /sio /sio/
     handle_path /sio/* {
         rewrite * /socket.io{path}
-        reverse_proxy server:5000
+        reverse_proxy osu-pulse-server-1:5000
     }
 
     handle_path /graphql {
         rewrite * /graphql
-        reverse_proxy server:5000
+        reverse_proxy osu-pulse-server-1:5000
     }
 
     handle_path /minio/* {
-        reverse_proxy minio:9000
+        reverse_proxy osu-pulse-minio-1:9000
+    }
+
+    handle_path /osu/* {
+        reverse_proxy osu-pulse-nginx-1:80
     }
 
     handle_path /health {
