--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -21,29 +21,6 @@ services:
       retries: 5
       start_period: 1m
 
-  mongo-express:
-    image: mongo-express
-    environment:
-      ME_CONFIG_BASICAUTH_USERNAME: $ME__USERNAME
-      ME_CONFIG_BASICAUTH_PASSWORD: $ME__PASSWORD
-      ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGO__USERNAME
-      ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGO__PASSWORD
-      ME_CONFIG_MONGODB_SERVER: mongo
-      ME_CONFIG_MONGODB_PORT: 27017
-    expose:
-      - 8081
-    ports:
-      - "8001:8081"
-    depends_on:
-      - mongo
-    restart: unless-stopped
-    healthcheck:
-      test: curl -f http://mongo-express:8081
-      interval: 5m
-      timeout: 10s
-      retries: 5
-      start_period: 5m
-
   minio:
     image: minio/minio
     environment:
@@ -116,13 +93,31 @@ services:
 #      retries: 5
 #      start_period: 1m
 
+  nginx:
+    image: nginx:alpine
+    expose:
+      - 80
+    ports:
+      - "8006:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    restart: unless-stopped
+    healthcheck:
+      test: curl -f http://nginx:80/health
+      interval: 1m
+      timeout: 10s
+      retries: 5
+      start_period: 1m
+
+
+
   caddy:
     image: caddy:alpine
     expose:
       - 80
       - 443
     ports:
-      - "8006:80"
+      - "8007:80"
       - "80:80"
       - "443:443"
     volumes:
