--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -5,6 +5,7 @@ http {
         listen 80;
 
         location /assets/ {
+            add_header Access-Control-Allow-Origin "*";
             proxy_pass http://assets.ppy.sh/;
         }
 
