--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -21,5 +21,5 @@ OSU__CLIENT_ID=
 OSU__CLIENT_SECRET=
 
 # Versions
-VERSION__SERVER=0.9.2-alpha
-VERSION__CLIENT=0.9.0
+VERSION__SERVER=0.13.0-alpha
+VERSION__CLIENT=0.9.0-alpha
