--- a/deploy/Caddyfile
+++ b/deploy/Caddyfile
@@ -29,6 +29,7 @@
     }
 
     handle_path /minio/* {
+        header_down +Access-Control-Allow-Origin "*"
         reverse_proxy osu-pulse-minio-1:9000
     }
 
